reverted back to original. If you have time in the future, fix the layout so that it works on mobile. Also, call Blankman

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 html, body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
-  width: 100%;
 }
 
 .header-container{
@@ -43,8 +42,7 @@ padding-left: 15px;
   display: flexbox;
   text-align: left;
   word-wrap: wrap;
-  width: 50%;
-  height: 50%;
+  width: 350px;
   margin: 50px;
 }
 
@@ -54,8 +52,7 @@ padding-left: 15px;
   height: 50%;
   width: 50%;
   margin-bottom: 55px;
-  margin-top: 20px;
-  margin-right: 50px;
+  margin-top: 10px;
   border-radius: 15px;
   flex-shrink: 2;
 }
@@ -64,7 +61,6 @@ padding-left: 15px;
   display: flex;
   justify-content: center;
 }
-
 button{
   background-color: #4CAF50;
   border: none;
